--- a/About/css/styles.css
+++ b/About/css/styles.css
@@ -1,183 +1,110 @@
+/*=============================================
+Global Styles
+=============================================*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
-	margin: 0;
-	padding: 0;
-    width: 100%;
-	height: 100%;
-	background-color: #fff;
+    font-family: 'Dosis', sans-serif;
+    background-color: #fff;
+    color: #555;
+    font-weight: 30;
+    font-size: 20px;
+    text-rendering: optimizeLegibility;
 }
 
-.container {
-	width: 100%;
-	margin: 0 auto;
-}
-
-/* 
-=============================================
-Navigation
-=============================================
-*/
-
-.navbar-default {
-	border-color: transparent;
-	background-color: transparent;
-}
-
-.navbar .navbar-nav {
-	display: inline-block;
-	float: right;
-}
-
-.navbar-brand{
-    
-    font-weight: 400;
-    transition: 1s;
-    font-size: 30px;
-}
-
-#nav-name{
-
-    color: black;
-
-}
-
-.navbar-toggle {
-	float: right;
-}
-
-.navbar-header {
-	text-align: center;
-}
-
-.navbar .navbar-collapse {
-	text-align: center;
-}
-
-
-ul {
-    
-	font-size: 20px;
-	font-weight: bold;
-	font-family: 'Saira', sans-serif;
-    
-}
-
-.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-	background-color: #B70123;
-	color: white;
-	transition: color 0.1s ease-in-out;
-	transition: all 0.5s;
-}
-
-a {
-	color: black;
-	transition: color 0.1s ease-in-out;
-	transition: all 0.5s;
-}
-
-a:hover {
-	color: red;
-    text-decoration: none;
-}
-
-
-/* 
-=============================================
-Header Image
-=============================================
-*/
-
-.header {
-  height: 200px;
-  display: flex;
-  align-items: center;
-  background: url('../../img/temp.jpg') ,rgba(0,0,0, .5);
-  background-blend-mode: overlay;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  text-align: center;
-}
-
-
-/* 
-=============================================
-Headers & Text
-=============================================
-*/
-h1 {
-	font-size: 90px;
-	color: white;
-	text-align: center;
-    font-weight: lighter;
-	font-family: 'Rajdhani', sans-serif;
-}
-
-
-.text {
-	margin-top: 25px;
-}
-
-p {
-	width: auto;
-	color: black;
-	vertical-align: middle;
-	padding-bottom: 20px;
-}
-
-/* 
-=============================================
-Image
-=============================================
-*/
-
-img {
-	display: block;
+.row {
+    max-width: 1140px;
     margin: 0 auto;
-    margin-bottom: 2em;
-	width: 40%;
-    border: 1px solid #333;
-    box-shadow:0 0 10px rgba(0,0,0,0.6);
 }
 
-/* 
-=============================================
+/*=============================================
+Navbar
+=============================================*/
+
+#mainNav {
+    background-color: rgba(0, 0, 0, 1) !important;
+}
+
+.navbar-brand {
+    font-size: 22px;
+    letter-spacing: 2px;
+}
+
+.nav-link {
+    color: white;
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+/*=============================================
+About Section
+=============================================*/
+
+.about-section row {
+    margin-top: 2em;
+}
+
+.about-section h1 {
+    text-transform: uppercase;
+    font-weight: 200;
+    padding-top: 1.5em;
+    color: white;
+}
+
+.about-section {
+    background-image: url("../img/ancient-forest-bg.jpg"), 
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%),
+        linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
+    background-blend-mode: multiply;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
+.about-section h1 {
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.about-box{
+    margin-top: 60px;
+}
+
+.about-section img {
+    width: 80%;
+}
+
+.about-section p {
+    font-size: 110%;
+    color: white;
+    line-height: 145%;
+    width: 100%;
+}
+
+/*=============================================
 Footer
-=============================================
-*/
+=============================================*/
 
 .footer {
 	text-align: center;
-	background-color: black;
-	position: relative;
-	bottom: 0;
-	width: 100%;
-	height: 100px;
+    margin-top: 5em;
 }
 
-.text-muted {
-    color: azure;
-	text-align: center;
-	padding-top: 40px;
+.footer p {
+    color: #fff;
+    font-size: 85%;
+    word-spacing: 1px;
 }
-
-
-/* 
-=============================================
-Responsive
-=============================================
-*/
-
-@media screen and (max-width: 768px) {
-	h1 {
-		font-size: 45px;
-	}
-	
-	p {
-    
-    }
-	
-	img {
-        width: 95%;
-    }
-}
-
