--- a/Assignments/Final/css/styles.css
+++ b/Assignments/Final/css/styles.css
@@ -1,5 +1,17 @@
+body {
+    background-image: url("../img/w3-swamp.jpg"), 
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%),
+        linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
+    background-blend-mode: multiply;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
 h1{
-	color: black;
+	color: white;
 	text-align: center;
     font-family: 'Sintony', sans-serif;
 }	
@@ -7,7 +19,7 @@ h1{
 p {
     text-align: center;
     width: auto;
-    color: black;
+    color: white;
     font-family: 'Sintony', sans-serif;
 }
 
@@ -19,12 +31,13 @@ button {
     padding-top:10px;
     padding-bottom:10px;
     text-align: center;
-    position: static;
 
+    transition: transform 0.5s;
 }
 
 button:hover {
     color: blue;
-	transition: color 0.2s ease-in-out;
+
+    transform: scale(1.1);
 
 }
