--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -45,7 +45,8 @@ body {
         }
 
         @include respond(phone) {
-            font-size: 1rem;
+            font-size: 1.3rem;
+            letter-spacing: 2px;
             font-weight: 700;
         }
     }
