--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,10 @@
     background-position: center;
     background-attachment: fixed;
     position: relative;
+    
+    @include respond(tablet-portrait) {
+        background-attachment: scroll;
+    }
 
     &__text-box {
         position: absolute;
