--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -18,4 +18,10 @@ section {
     background-position: center;
     background-attachment: fixed;
     color: $color-white;
+
+    @include respond(tablet-portrait) {
+        background-attachment: scroll;
+        margin: 0 auto;
+        padding: 6rem 0;
+    }
 }
